# type-registry-service

./: Dockerfile  README.md  pyproject.toml
conf/: settings.toml
src/: main.py
