[tool.poetry]
name = "type-registry-service"
version = "0.1.8"
description = ""
authors = ["Eko Indarto <eko.indarto@dans.knaw.nl>"]
readme = "README.md"
include = ["resources/*", "logs/*", "conf/*"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.24.post1"
dynaconf = "^3.2.3"
fastapi = "^0.105.0"
loguru = "^0.7.2"
emoji = "^2.9.0"
jsonpath-ng = "^1.6.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
